@@ -1,6 +1,7 @@
 version 2.5.8
 --------------
-Thanks to James F. for feedback and bug report
+Thanks to James F. for feedback and bug report. Thanks to hawajrambo2 for
+bug report and scenario to reproduce it.
 
 version 2.5.7
 --------------
