@@ -7,6 +7,8 @@ from 2.5.7 to 2.5.8
   -aduc option a non zero exist status of any script (and not only of the
   script give to the last -E option) will lead dar to report the error.
 - man page updated about combination of several -E options
+- fixed bug: merging partial FSA led to self reported bug in cat_inode.cpp
+  at line 615
 
 from 2.5.6 to 2.5.7
 - fixed bug leading dar to not include directories given to -g option nor
